fixed missing div, ensured explicit sizing to prevent shifts

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -460,16 +460,11 @@ nav ul li :hover {
   text-decoration: underline;
 }
 
-.categories-title h1,
+.categories-title h2,
 .feature-title h2 {
   width: 100%;
   height: auto;
   text-align: center;
-}
-
-.feature-box {
-  width: 100%;
-  height: auto;
 }
 
 .feature-box,
@@ -478,6 +473,7 @@ nav ul li :hover {
   flex-direction: column;
   width: 100%;
   max-width: 100vw;
+  min-height: 2vh;
   height: auto;
   text-align: left;
   margin: 0 auto;
@@ -579,6 +575,7 @@ nav ul li :hover {
   width: 60%;
   max-width: 60vw;
   height: auto;
+  min-height: 2vh;
 }
 
 .category-buttons2 .button,
@@ -1846,10 +1843,10 @@ figcaption {
     display: grid;
     margin: 1em auto;
     gap: 1em;
-    min-width: 40vw;
-    width: 60vw;
+    width: 60%;
     max-width: 60vw;
     height: auto;
+    min-height: 2vh;
   }
 
   .feature-box-text a p {
@@ -1871,6 +1868,7 @@ figcaption {
     width: 80%;
     max-width: 80vw;
     height: auto;
+    min-height: 1vh;
   }
 
   .button2 {
@@ -2244,9 +2242,25 @@ figcaption {
     padding: 1vw 0.5vw 0.5vw;
   }
 
+  .feature-box {
+    padding: 1em 0;
+    width: 100%;
+    max-width: 100vw;
+    height: auto;
+    min-height: 1vh;
+  }
+
+  .feature-box img {
+    width: 100%;
+    height: auto;
+    min-height: 2vh;
+    aspect-ratio: 5 / 4;
+  }
+
   .feature-box-text p {
     font-size: 2vw;
     height: auto;
+    min-height: 1vh;
     padding: 0.5vw;
   }
 
@@ -2378,6 +2392,8 @@ figcaption {
   }
 
   .hero-img img {
+    width: 100%;
+    height: auto;
     object-position: bottom;
     aspect-ratio: 1.25 / 1;
     object-fit: cover;
@@ -2481,8 +2497,8 @@ figcaption {
   }
 
   .categories {
-    width: 80%;
-    max-width: 80vw;
+    width: 90%;
+    max-width: 90vw;
     height: auto;
     min-height: 2vh;
     margin: 0 auto;
@@ -2494,6 +2510,7 @@ figcaption {
     gap: 0.5em;
     width: 100%;
     height: auto;
+    min-height: 1vh;
     max-width: 100vw;
     min-width: 10vw;
   }
@@ -2505,8 +2522,8 @@ figcaption {
   .categories-title,
   .feature-title {
     padding: 1em 0 0.5em;
-    width: 80%;
-    max-width: 80vw;
+    width: 90%;
+    max-width: 90vw;
     height: auto;
     min-height: 2vh;
     margin: 0 auto;
@@ -2581,6 +2598,7 @@ figcaption {
     width: 100%;
     max-width: 100vw;
     height: auto;
+    min-height: 1vh;
   }
 
   .category-box-text a h3,
